--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.21",
     "next": "^15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
