--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,8 +47,8 @@ services:
     environment:
       NODE_ENV: production
       NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:4000/api}
-      # REQUIRED: Set this in your .env file or environment
-      PAWAPAY_API_KEY: ${PAWAPAY_API_KEY:?PAWAPAY_API_KEY is required}
+    env_file:
+      - ./apps/web/.env
     ports:
       - "3000:3000"
     depends_on:
