--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -1,69 +1,61 @@
-# Build stage
-FROM node:20-alpine AS build
+# Use Node.js 20 LTS as base image
+FROM node:20-alpine AS base
 
-# Install necessary system dependencies
+# Install necessary dependencies including OpenSSL for Prisma
 RUN apk add --no-cache openssl libc6-compat
 
 WORKDIR /app
 
-# Copy package files for dependency installation
+# Copy package files
 COPY package*.json ./
 COPY prisma ./prisma/
 
-# Install all dependencies (including devDependencies for building)
-RUN npm ci
+# Install dependencies
+RUN npm ci --include=dev
 
 # Generate Prisma Client
 RUN npx prisma generate
 
-# Copy source code and configuration
+# Copy source code
 COPY src ./src
 COPY tsconfig.json ./
 
 # Build the application
 RUN npm run build && \
-    echo "=== Build command completed ===" && \
-    ls -la && \
-    echo "=== Checking for dist directory ===" && \
-    if [ -d "dist" ]; then \
-        echo "✓ dist directory exists" && \
-        ls -la dist/ && \
-        echo "=== Checking for main.js ===" && \
-        if [ -f "dist/main.js" ]; then \
-            echo "✓ Build successful: dist/main.js exists"; \
-        else \
-            echo "✗ Build failed: dist/main.js not found" && \
-            exit 1; \
-        fi \
-    else \
-        echo "✗ Build failed: dist directory not created" && \
-        exit 1; \
-    fi
+    echo "=== Build completed, checking dist directory ===" && \
+    ls -la dist/ && \
+    echo "=== Checking for main.js ===" && \
+    test -f dist/main.js && echo "main.js exists!" || echo "ERROR: main.js NOT found!"
 
 # Production stage
 FROM node:20-alpine AS production
 
-# Install necessary system dependencies
+# Install OpenSSL for Prisma
 RUN apk add --no-cache openssl libc6-compat
 
 WORKDIR /app
 
-# Copy package files and Prisma schema (needed for postinstall script)
+# Copy package files
 COPY package*.json ./
 COPY prisma ./prisma/
 
-# Install only production dependencies
-# Note: postinstall script runs "npx prisma generate" which needs prisma directory
+# Install production dependencies only
 RUN npm ci --omit=dev
 
+# Generate Prisma Client
+RUN npx prisma generate
+
 # Copy built application from build stage
-COPY --from=build /app/dist ./dist
+COPY --from=base /app/dist ./dist
 
-# Verify dist directory in production
-RUN ls -la dist/ && test -f dist/main.js && echo "✓ Production stage: dist/main.js exists" || (echo "✗ Production stage: dist/main.js not found" && exit 1)
+# Verify dist directory exists and has files
+RUN echo "=== Checking dist in production stage ===" && \
+    ls -la dist/ && \
+    echo "=== Verifying main.js in production ===" && \
+    test -f dist/main.js && echo "main.js found in production!" || echo "ERROR: main.js NOT in production!"
 
-# Expose application port
+# Expose port (Railway will provide this via PORT env var)
 EXPOSE 3000
 
-# Start command: run migrations then start the application
+# Start command - run migrations then start the app
 CMD ["sh", "-c", "npx prisma migrate deploy && node dist/main.js"]
